Fixed inconsistent spacing

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -61,7 +61,7 @@
 
 @media only screen and (max-width: 360px) {
   .home-content-container {
-    padding: 20px 20px;
+    padding: 10px;
     order: 2;
   }
 }
